--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ethereumjs-wallet",
+  "name": "@macalinao/ethereumjs-wallet",
   "version": "0.6.3",
   "description": "Utilities for handling Ethereum keys",
   "main": "dist/index.js",
