--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@macalinao/ethereumjs-wallet",
-  "version": "0.6.3",
+  "version": "0.6.3-ian",
   "description": "Utilities for handling Ethereum keys",
   "main": "dist/index.js",
   "types": "./dist/index.d.ts",
@@ -58,9 +58,9 @@
     "@ethereumjs/config-tsc": "^1.1.1",
     "@ethereumjs/config-tslint": "^1.1.1",
     "@types/bn.js": "^4.11.5",
+    "@types/lodash.zip": "^4.2.6",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.10",
-    "@types/lodash.zip": "^4.2.6",
     "coveralls": "^3.0.0",
     "ethers": "^4.0.33",
     "husky": "^2.1.0",
